--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         display: inline-block;
                         font-size: 2.5rem;
                         animation: gradient 3s ease infinite, alternate-text 10s ease-in-out infinite reverse;
-                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">37th ANNUAL CTEVT DAY</span>
+                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">Mero Sanu Mero Bakullu Bakulla</span>
               </div>
             </h2>
 
