--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         letter-spacing: 4px;
                         display: inline-block;
                         animation: gradient 3s ease infinite, alternate-text 10s ease-in-out infinite;
-                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">#Fluid ko Miss!</span>
+                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">#Welcome!</span>
               </div>
               <div class="text-wrapper" style="position: absolute;">
                 <span style="
@@ -62,7 +62,7 @@
                         display: inline-block;
                         font-size: 2.5rem;
                         animation: gradient 3s ease infinite, alternate-text 10s ease-in-out infinite reverse;
-                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">Mero Sanu Mero Bakullu Bakulla</span>
+                        text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);">38th Annual CTEVT Day</span>
               </div>
             </h2>
 
